@@ -4,6 +4,7 @@ import com.neusoft.cloud_brain_diagnosis.common.exception.BusinessException;
 import com.neusoft.cloud_brain_diagnosis.entity.*;
 import com.neusoft.cloud_brain_diagnosis.repository.*;
 import com.neusoft.cloud_brain_diagnosis.service.ExaminationService;
+import com.neusoft.cloud_brain_diagnosis.service.ai.AiExaminationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -23,6 +24,7 @@ public class ExaminationServiceImpl implements ExaminationService {
     private final RegistrationRepository registrationRepository;
     private final PatientRepository patientRepository;
     private final DoctorRepository doctorRepository;
+    private final AiExaminationService aiExaminationService;
 
     /**
      * 医生-开立检查
@@ -44,10 +46,9 @@ public class ExaminationServiceImpl implements ExaminationService {
         }
         ExaminationItem item = examinationItemRepository.findById(examination.getItemId())
                 .orElseThrow(() -> new BusinessException("检查项目不存在"));
-
         if (examinationRepository.existsByRegistrationIdAndItemIdAndStatus(
                 examination.getRegistrationId(), examination.getItemId(), "待检查")) {
-            throw new BusinessException("该检查项目已开立，请勿重复提交");
+            throw new BusinessException("该检查项目已开立");
         }
 
         // 3. 验证患者和医生
@@ -70,13 +71,33 @@ public class ExaminationServiceImpl implements ExaminationService {
         return examinationRepository.save(examination);
     }
 
+    /**
+     * 检查详情
+     */
+    @Override
+    public Examination getDetail(Long id, Long userId, String role) {
+        Examination examination = examinationRepository.findById(id)
+                .orElseThrow(() -> new BusinessException("检查记录不存在"));
+        if ("patient".equals(role) && !examination.getPatientId().equals(userId)) {
+            throw new BusinessException("无权查看其他患者的检查");
+        }
+        if ("doctor".equals(role) && !examination.getDoctorId().equals(userId)) {
+            throw new BusinessException("无权查看其他医生患者的检查");
+        }
+        if (!"patient".equals(role) && !"doctor".equals(role)
+                && !"admin".equals(role) && !"lab".equals(role)) {
+            throw new BusinessException("当前角色无权查看检查详情");
+        }
+        return examination;
+    }
+
     @Override
     @Transactional
     public String cancelExamination(Long id, Long doctorId) {
         Examination examination = examinationRepository.findById(id)
                 .orElseThrow(() -> new BusinessException("检查记录不存在"));
         if (!examination.getDoctorId().equals(doctorId)) {
-            throw new BusinessException("无权撤销其他医生开立的检查");
+            throw new BusinessException("无权撤销其他医生的检查");
         }
         if (!"待检查".equals(examination.getStatus())) {
             throw new BusinessException("只有待检查项目可以撤销");
@@ -91,38 +112,9 @@ public class ExaminationServiceImpl implements ExaminationService {
         Registration registration = registrationRepository.findById(registrationId)
                 .orElseThrow(() -> new BusinessException("挂号记录不存在"));
         if (!registration.getDoctorId().equals(doctorId)) {
-            throw new BusinessException("无权查看其他医生的检查记录");
+            throw new BusinessException("无权查看其他医生患者的检查");
         }
         return examinationRepository.findByRegistrationIdOrderByCreateTimeDesc(registrationId);
-    }
-
-    private void validateDoctorCanOperate(Registration registration, Long doctorId) {
-        if (!registration.getDoctorId().equals(doctorId)) {
-            throw new BusinessException("无权操作其他医生的患者");
-        }
-        if (!"就诊中".equals(registration.getStatus())) {
-            throw new BusinessException("请先开始看诊，只有就诊中的挂号可以开立检查");
-        }
-    }
-
-    /**
-     * 检查详情
-     */
-    @Override
-    public Examination getDetail(Long id, Long userId, String role) {
-        Examination examination = examinationRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("检查记录不存在"));
-        if ("doctor".equals(role) && !examination.getDoctorId().equals(userId)) {
-            throw new BusinessException("无权查看其他医生患者的检查记录");
-        }
-        if ("patient".equals(role) && !examination.getPatientId().equals(userId)) {
-            throw new BusinessException("无权查看其他患者的检查记录");
-        }
-        if (!"doctor".equals(role) && !"patient".equals(role)
-                && !"lab".equals(role) && !"admin".equals(role)) {
-            throw new BusinessException("当前角色无权查看检查记录");
-        }
-        return examination;
     }
 
     /**
@@ -149,13 +141,14 @@ public class ExaminationServiceImpl implements ExaminationService {
     @Override
     public Page<Examination> getLabList(String status, Integer page, Integer size) {
         PageRequest pageRequest = PageRequest.of(page - 1, size, Sort.by(Sort.Direction.DESC, "createTime"));
-        if (status == null || status.isBlank() || "全部".equals(status)) {
+        if (status == null || status.trim().isEmpty() || "全部".equals(status.trim())) {
             return examinationRepository.findAllByOrderByCreateTimeDesc(pageRequest);
         }
-        if (!"待检查".equals(status) && !"已完成".equals(status)) {
-            throw new BusinessException("检查状态参数不正确");
+        String trimmedStatus = status.trim();
+        if (!"待检查".equals(trimmedStatus) && !"已完成".equals(trimmedStatus) && !"已撤销".equals(trimmedStatus)) {
+            throw new BusinessException("状态参数不正确");
         }
-        return examinationRepository.findByStatusOrderByCreateTimeDesc(status, pageRequest);
+        return examinationRepository.findByStatusOrderByCreateTimeDesc(trimmedStatus, pageRequest);
     }
 
     /**
@@ -179,11 +172,12 @@ public class ExaminationServiceImpl implements ExaminationService {
         }
 
         // 4. 更新结果和状态
-        examination.setResult(result.trim());
+        examination.setResult(result);
         examination.setResultImages(resultImages);
         examination.setStatus("已完成");
         examination.setCompleteTime(LocalDateTime.now());
         examinationRepository.save(examination);
+        aiExaminationService.detectCriticalValue(id);
 
         return "结果提交成功";
     }
@@ -197,5 +191,14 @@ public class ExaminationServiceImpl implements ExaminationService {
             return examinationItemRepository.findByType(type);
         }
         return examinationItemRepository.findAll();
+    }
+
+    private void validateDoctorCanOperate(Registration registration, Long doctorId) {
+        if (!registration.getDoctorId().equals(doctorId)) {
+            throw new BusinessException("无权操作其他医生的患者");
+        }
+        if (!"就诊中".equals(registration.getStatus())) {
+            throw new BusinessException("请先开始看诊");
+        }
     }
 }
